--- a/BookManager/pom.xml
+++ b/BookManager/pom.xml
@@ -97,6 +97,7 @@
     </dependencies>
 
     <build>
+        <finalName>origin</finalName>
         <plugins>
             <!-- 打包插件 -->
             <plugin>
